--- a/front/src/components/listings-list-view/ListingsListView.scss
+++ b/front/src/components/listings-list-view/ListingsListView.scss
@@ -6,20 +6,54 @@
   display: flex;
   flex-direction: column-reverse;
 
+  p {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+  }
+
   &-item {
     padding: 2.5rem 3.5rem;
     background-color: $primary-background;
     border-top: solid 0.1rem $primary-grn;
-    display: flex;
+    font-size: 1.2rem;
+    display: grid;
+    grid-template-columns: 7rem 16rem auto;
+    gap: 2rem;
     align-items: center;
-    justify-content: space-between;
 
-    
+    @media (min-width: $desktop-width) {
+      grid-template-columns: 8rem 12rem 15rem auto;
+      gap: 2rem;
+      font-size: 1.4rem;
+    }
+
+    &__exchange {
+      text-transform: uppercase;
+    }
+
+    &__location {
+      display: none;
+
+      @media (min-width: $desktop-width) {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        text-transform: capitalize;
+      }
+    }
+
     &__name {
-      font-size: 1.6rem;
+      font-weight: 500;
+      text-transform: capitalize;
+
+      @media (min-width: $desktop-width) {
+        font-weight: 400;
+      }
     }
 
     .arrow {
+      justify-self: flex-end;
       width: 2.5rem;
       height: 0.1rem;
       background-color: $primary-grn;
