--- a/front/src/pages/Menu/Menu.scss
+++ b/front/src/pages/Menu/Menu.scss
@@ -1,39 +1,37 @@
-@use "../../abstracts/"as *;
+@use '../../abstracts/' as *;
 
 .menu {
-    background-color: $primary-grn;
+  background-color: $primary-grn;
+  width: 100vw;
+  height: 100vh;
+
+  &-header {
     width: 100vw;
-    height: 100vh;
+    height: 10.5vh;
+    border-bottom: 1px solid $primary-background;
+    display: flex;
 
-    &-header {
-        width: 100vw;
-        height: 10.5vh;
-        border-bottom: 1px solid $primary-background;
-        display: flex;
+    &__link {
+      color: $primary-background;
+      padding-left: 35px;
+    }
+  }
 
+  &-body {
+    width: 100vw;
+    height: 89vh;
+    display: flex;
+    flex-direction: column-reverse;
+    flex-wrap: wrap-reverse;
 
-        &__link {
-            color: $primary-background;
-            padding-left: 35px;
-        }
+    &__link {
+      border-top: 1px solid $primary-background;
     }
 
-    &-body {
-        width: 100vw;
-        height: 89vh;
-        display: flex;
-        flex-direction: column-reverse;
-        flex-wrap: wrap-reverse;
-
-
-        &__link {
-            border-top: 1px solid $primary-background;
-        }
-
-        &__link-title {
-            padding: 20px 0 20px 42px;
-            font-size: 1.6em;
-            color: $primary-background;
-        }
+    &__link-title {
+      padding: 20px 0 20px 42px;
+      font-size: 1.6em;
+      color: $primary-background;
     }
+  }
 }
