--- a/front/src/pages/Signup/Signup.scss
+++ b/front/src/pages/Signup/Signup.scss
@@ -1,5 +1,4 @@
-@use "../../abstracts/"as *;
-
+@use '../../abstracts/' as *;
 
 .signup {
   width: 100vw;
@@ -105,7 +104,6 @@
       border: 1px solid rgb(218, 74, 74);
       margin: auto;
     }
-
 
     &__conditions {
       display: inline-flex;
