--- a/front/src/pages/Login/Login.scss
+++ b/front/src/pages/Login/Login.scss
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     height: 10vh;
-    border-bottom: 1px solid #008148;
+    border-bottom: 1px solid $primary-grn;
   }
 
 
